<resources>
    <string name="app_name">Bravia Remote Controler</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="bravia_remote">Bravia Remote</string>
    <string name="menu_keyboard">Keyboard</string>

    <!-- Settings Fragment -->
    <string name="settings_saved">Settings saved</string>
    <string name="settings_error_fill_all">Please fill all fields</string>
    <string name="settings_error_test_fill">Fill IP and PSK first</string>
    <string name="test_connection_success">Success: Connected to Bravia TV</string>
    <string name="test_connection_failed">Failed: Could not connect to TV. Check IP, PSK and Network.</string>

    <!-- Keyboard Fragment -->
    <string name="keyboard_hint">Enter text to send to TV</string>
    <string name="button_send_text">Send Text</string>
    <string name="text_sent_success">Text sent successfully</string>
    <string name="text_sent_failed">Failed to send text</string>
    <string name="button_youtube_search">YouTube Search</string>
    <string name="youtube_typing_started">Starting YouTube cursor input...</string>
</resources>