<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_remote_control"
            android:icon="@drawable/ic_tv_24dp"
            android:title="@string/bravia_remote" />
        <item
            android:id="@+id/nav_keyboard"
            android:icon="@drawable/ic_keyboard_black_24dp"
            android:title="@string/menu_keyboard" />
        <item
            android:id="@+id/nav_debug_remote"
            android:icon="@drawable/ic_slideshow_black_24dp"
            android:title="Debug" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
    </group>
</menu>